<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurriculumActivity">

    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="284dp"
        android:layout_height="46dp"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:text="@string/titulo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFullName" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="237dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/telefono"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="237dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:text="@string/correo"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="237dp"
        android:layout_height="47dp"
        android:layout_weight="1"
        android:text="@string/locacion"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewExperience"
        android:layout_width="237dp"
        android:layout_height="39dp"
        android:text="@string/experiencia"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocation" />

    <TextView
        android:id="@+id/textViewEducation"
        android:layout_width="236dp"
        android:layout_height="42dp"
        android:text="@string/educacion"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExperience" />

    <TextView
        android:id="@+id/textViewSkills"
        android:layout_width="236dp"
        android:layout_height="41dp"
        android:text="@string/habilidades"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEducation" />

    <TextView
        android:id="@+id/textViewLanguages"
        android:layout_width="239dp"
        android:layout_height="35dp"
        android:text="@string/idiomas"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSkills" />
</androidx.constraintlayout.widget.ConstraintLayout>